# a172_core

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: core_class.hpp  delegate.hpp  event.hpp  logger.hpp  outcome.hpp  property.hpp  random.hpp  result.hpp  string.hpp  test_class.hpp  timer.hpp
include/__miscellaneous__/: global_macro_list.hpp
include/common/: defines.hpp  delegate.hpp  error_types.hpp  event.hpp  global_macro_list.hpp  inlined_functions.hpp  logger.hpp  outcome.hpp  property.hpp  random.hpp  result.hpp  string.hpp  type_traits.hpp  types.hpp
include/container/: forward_list.hpp  list.hpp  map.hpp  set.hpp  unordered_map.hpp  vector.hpp
include/containers/: forward_list.hpp  list.hpp  map.hpp  set.hpp  unordered_map.hpp  vector.hpp
include/files/: file.hpp  file_system.hpp  file_types.hpp  path.hpp
include/memory/: memory_system.hpp
include/memory/memory_allocators/: allocator.hpp  c_allocator.hpp  free_list_allocator.hpp  gpu_free_list_allocator.hpp  linear_allocator.hpp  pool_allocator.hpp  singly_linked_list.hpp  stack_allocator.hpp  stack_linked_list.hpp
include/multithreading/: parallel.hpp
include/platform/: platform.hpp
include/serialization/: binary_serializer.hpp  serializable.hpp  serializer.hpp
src/: core_class.cpp  random.cpp  string.cpp  test_class.cpp
src/common/: logger.cpp  string.cpp  timer.cpp
src/memory/: memory_system.cpp
src/memory/memory_allocators/: allocator.cpp  (+6 more)
src/platform/: platform_linux.cpp  platform_windows32.cpp
src/serialization/: binary_serializer.cpp
test/: main.cpp
